--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "express": "^4.15.3",
     "history": "^4.7.2",
     "jade": "^1.11.0",
+    "lodash": "^4.17.4",
     "morgan": "^1.8.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router": "^4.2.0"
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.2.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "concurrently": "^3.5.0",
