--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "concurrently": "^3.5.0",
     "nodemon": "^1.12.0",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "styled-components": "^2.3.2"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"nodemon server/server.js\"",
