--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
